--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>zhihu</title>
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_821125_jephn7dwcui.css">
   </head>
   <body>
     <div id="app"></div>
