--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>zhihu</title><link rel=stylesheet href=//at.alicdn.com/t/font_821125_jephn7dwcui.css><link href=/static/css/app.14e61f6b10bbc77ebfb84c8641da01d6.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.2ae2e69a05c33dfc65f8.js></script><script type=text/javascript src=/static/js/vendor.b8580e1294724b76ff58.js></script><script type=text/javascript src=/static/js/app.6f7173cebefbece013b1.js></script></body></html>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset=utf-8>
+    <meta name=viewport content="width=device-width,initial-scale=1">
+    <title>zhihu</title>
+    <link rel=stylesheet href=//at.alicdn.com/t/font_821125_jephn7dwcui.css>
+    <link href=./static/css/app.14e61f6b10bbc77ebfb84c8641da01d6.css rel=stylesheet>
+</head>
+
+<body>
+    <div id=app></div>
+    <script type=text/javascript src=./static/js/manifest.2ae2e69a05c33dfc65f8.js></script>
+    <script type=text/javascript src=./static/js/vendor.b8580e1294724b76ff58.js></script>
+    <script type=text/javascript src=./static/js/app.6f7173cebefbece013b1.js></script>
+</body>
+
+</html>
